manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homepage
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - image: docker.k8s.reidn.org/thea/homepage
        name: homepage
        imagePullPolicy: Always
        volumeMounts:
          - name: cv
            mountPath: /app/static/files/
      volumes:
        - name: cv
          emptyDir: {}
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homepage
  name: homepage-service
  namespace: homepage
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: homepage
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - reidn.org
    secretName: root-reidn-org
  rules:
  - host: "reidn.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-service
            port:
              number: 80
